ci-based-analysis-added

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.organization=ssii-pai
 sonar.projectKey=SSII-PAI_PAI3
 sonar.projectName=PAI3
-sonar.java.binaries= **/*.java
+sonar.java.binaries=.
