REFACTOR: REFACTORIZA CODIGO

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": "Kpi",
             "request": "launch",
             "mainClass": "Kpi",
-            "projectName": "PAI3_18850fce"
+            "projectName": "PAI3_393e52f1"
         },
         {
             "type": "java",
